--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "frontity"
   ],
   "engines": {
-    "node": "18.12.1",
-    "npm": ">=6.0.0"
+    "node": "18",
+    "npm": "8"
   },
   "scripts": {
     "start": "frontity dev",
@@ -18,11 +18,11 @@
   },
   "prettier": {},
   "dependencies": {
-    "frontity": "^1.17.2",
-    "@frontity/core": "^1.16.0",
-    "@frontity/wp-source": "^1.11.7",
-    "@frontity/tiny-router": "^1.4.4",
-    "@frontity/html2react": "^1.7.0",
+    "frontity": "1.17.2",
+    "@frontity/core": "1.16.0",
+    "@frontity/wp-source": "1.11.7",
+    "@frontity/tiny-router": "1.4.4",
+    "@frontity/html2react": "1.7.0",
     "@frontity/mars-theme": "./packages/mars-theme"
   }
 }
