--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "npm": "8"
   },
   "scripts": {
-    "start": "frontity dev",
-    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && frontity dev",
+    "start": "frontity dev NODE_OPTIONS=--openssl-legacy-provider",
+    "dev": "frontity dev",
     "build": "frontity build",
     "serve": "frontity serve"
   },
