--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "npm": "8"
   },
   "scripts": {
-    "start": "frontity dev NODE_OPTIONS=--openssl-legacy-provider",
+    "start": "frontity dev SET NODE_OPTIONS=--openssl-legacy-provider",
     "dev": "frontity dev",
-    "build": "frontity build NODE_OPTIONS=--openssl-legacy-provider",
+    "build": "frontity build",
     "serve": "frontity serve"
   },
   "prettier": {},
