--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "start": "frontity dev",
+    "dev": "frontity build --development",
     "build": "frontity build",
     "serve": "frontity serve"
   },
