--- a/package.json
+++ b/package.json
@@ -7,22 +7,21 @@
     "frontity"
   ],
   "engines": {
-    "node": "18",
-    "npm": "8"
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
   },
   "scripts": {
-    "start": "frontity dev",
-    "dev": "frontity build --development",
+    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && frontity dev",
     "build": "frontity build",
     "serve": "frontity serve"
   },
   "prettier": {},
   "dependencies": {
-    "frontity": "1.17.2",
-    "@frontity/core": "1.16.0",
-    "@frontity/wp-source": "1.11.7",
-    "@frontity/tiny-router": "1.4.4",
-    "@frontity/html2react": "1.7.0",
+    "frontity": "^1.17.2",
+    "@frontity/core": "^1.16.0",
+    "@frontity/wp-source": "^1.11.7",
+    "@frontity/tiny-router": "^1.4.4",
+    "@frontity/html2react": "^1.7.0",
     "@frontity/mars-theme": "./packages/mars-theme"
   }
 }
