--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && frontity dev",
     "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && frontity dev",
     "build": "frontity build",
     "serve": "frontity serve"
